<resources>
    <string name="app_name">Telkom University</string>
    <string name="nama">Nama Mahasiswa</string>
    <string name="tugas">Nilai Tugas</string>
    <string name="uts">Nilai UTS</string>
    <string name="uas">Nilai UAS</string>
    <string name="hadir">Nilai Kehadiran</string>
    <string name="submit">Submit</string>

    <string name="nilai">Nilai Akhir: %1$.2f</string>
    <string name="kategori">Kategori: %1$s</string>
    <string name="tugas_invalid">Nilai tugas tidak boleh kosong!</string>
    <string name="uts_invalid">Nilai UTS tidak boleh kosong!</string>
    <string name="uas_invalid">Nilai UAS tidak boleh kosong!</string>
    <string name="hadir_invalid">Nilai kehadiran tidak boleh kosong!</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

        <string name="nilai_A">Pertahankan Nilai</string>
        <string name="nilai_B">Sedikit lagi sempurna</string>
        <string name="nilai_C">Tingkatkan lagi</string>
        <string name="nilai_D">Ayo! Pasti bisa</string>
        <string name="nilai_E">Kenapa? Kok gak semangat</string>
        <string name="saranA">Lanjutkan semangat belajarnya ya, kamu pasti bisa</string>
        <string name="saranB">Selangkah lagi kamu sempurna, kamu pasti bisa</string>
        <string name="saranC">Bagus! Kamu sudah melewati semuanya, kamu pasti bisa</string>
        <string name="saranD">Lanjutkan semangat belajarnya ya, kamu pasti bisa</string>
        <string name="saranE">Kenapa? kamu lagi gak bersemangat belajar? Angkat kepala kamu, mahkotanya jatuh tuh, kamu pasti bisa</string>

        <string name="lihat_saran">Lihat Saran</string>
        <string name="bagikan">Bagikan</string>
        <string name="bagikan_template">Nilai Akhir: %1$s kg\nKategori Nilai: </string>
        <string name="channel_name">Update Gan!</string>
        <string name="channel_desc">Update otomatis nilai lu yak brou~</string>

    <string name="notif_title">Saatnya hitung Nilai akhir Brou!</string>
    <string name="notif_text">Hitung nilai akhir kamu deh, lulus gak tuh..</string>
    <string name="koneksi_error">Koneksi Error</string>
</resources>
